--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-langchain
-langchain-community
-chromadb
-pandas
-streamlit
+# Core Dependencies
+langchain==0.1.0
+langchain-community==0.0.12
+chromadb==0.4.22
+streamlit==1.29.0
+pandas==2.1.4
+
+# Document Processing
+pypdf==3.17.4
+
+# Development Dependencies (optional)
+# pytest==7.4.3
+# black==23.12.0
+# flake8==6.1.0
+
+# Note: Ollama should be installed separately from ollama.ai
